# nispor

./: .gitignore  .rustfmt.toml  .travis.yml  AUTHORS  CHANGELOG  Cargo.toml  DEVEL.md  Makefile  Makefile.inc  README.md  TODO  build.rs  go.mod  npc
.cargo/: config.toml
.github/workflows/: main.yml
pkg/nispor/: netstate.go  netstate_test.go
src/: info.grisge.zatel.varlink  main.rs
src/cli/: Cargo.toml  npc.rs  zc.rs
src/cli/examples/: 1000_veth_new.yml  add_route.yml  bond0_up.yml  br0_up.yml  del_route.yml  veth1_absent.yml  veth1_add_dynamic_ip.yml  veth1_add_static_ip.yml  veth1_del_ip.yml  veth1_down.yml  veth1_static_1000_ip.yml  veth1_static_ip.yml  vlan0_up.yml
src/clib/: Cargo.toml  build.rs  lib.rs  libnispor.h.in  nipsor.h_doc  nispor.h  nispor.h.in  nispor.pc.in
src/lib/: Cargo.toml  dns.rs  error.rs  filter.rs  iface_filter.rs  iface_state.rs  ip.rs  lib.rs  mac.rs  mptcp.rs  net_conf.rs  net_state.rs  route.rs  route_filter.rs  route_rule.rs  route_rule_filter.rs
src/lib/conf/: bond.rs  bridge.rs  iface.rs  inter_ifaces.rs  ip.rs  mod.rs  route.rs  veth.rs  vlan.rs
src/lib/crate_tests/: base_info.rs  bond.rs  bridge.rs  bridge_vlan_filter.rs  ethtool.rs  ip.rs  mac_vlan.rs  mac_vtap.rs  macsec.rs  mod.rs  route.rs  route_rule.rs  tap.rs  tun.rs  utils.rs  veth.rs  vlan.rs  vrf.rs  vxlan.rs
src/lib/filter/: mod.rs  net_state.rs  route.rs
src/lib/ifaces/: bond.rs  bridge.rs  common.rs  ethtool.rs  iface.rs  ifaces.rs  inter_ifaces.rs  ipoib.rs  mac_vlan.rs  mac_vtap.rs  macsec.rs  mod.rs  sriov.rs  tun.rs  veth.rs  vlan.rs  vrf.rs  vxlan.rs
src/lib/ifaces/netlink/: bond.rs  mod.rs
src/lib/integ_tests/: base_info.rs  bond.rs  bridge.rs  bridge_vlan_filter.rs  dummy.rs  hsr.rs  ip.rs  mac_vlan.rs  mod.rs  route.rs  route_rule.rs  tap.rs  utils.rs  veth.rs  vlan.rs  xfrm.rs
src/lib/netlink/: bond.rs  bridge.rs  bridge_port.rs  bridge_vlan.rs  error.rs  ip.rs  mod.rs  nla.rs  vxlan.rs
src/lib/query/: bond.rs  bridge.rs  ethtool.rs  hsr.rs  iface.rs  inter_ifaces.rs  ip.rs  ipoib.rs  mac_vlan.rs  mac_vtap.rs  macsec.rs  mod.rs  mptcp.rs  route.rs  route_rule.rs  sriov.rs  tun.rs  veth.rs  vlan.rs  vrf.rs  vxlan.rs  xfrm.rs
src/lib/tests/: base_info.rs  bond.rs  bridge.rs  bridge_vlan_filter.rs  dummy.rs  ethtool.rs  iface_common.rs  ip.rs  mac_vlan.rs  mac_vtap.rs  route.rs  route_rule.rs  tap.rs  tun.rs  utils.rs  veth.rs  vlan.rs  vrf.rs  vxlan.rs
src/lib/traffic_control/: mod.rs  qdisc.rs
src/netlink-ethtool/: Cargo.toml  connection.rs  error.rs  handle.rs  header.rs  lib.rs  macros.rs  message.rs
src/netlink-ethtool/coalesce/: attr.rs  get.rs  handle.rs  mod.rs
src/netlink-ethtool/examples/: dump_coalesce.rs  dump_features.rs  dump_link_mode.rs  dump_pause.rs  dump_rings.rs
src/netlink-ethtool/feature/: attr.rs  get.rs  handle.rs  mod.rs
src/netlink-ethtool/link_mode/: attr.rs  get.rs  handle.rs  mod.rs
src/netlink-ethtool/pause/: attr.rs  get.rs  handle.rs  mod.rs
src/netlink-ethtool/ring/: attr.rs  get.rs  handle.rs  mod.rs
src/netlink-generic/: Cargo.toml  buffer.rs  connection.rs  ctrl.rs  error.rs  handle.rs  header.rs  lib.rs  macros.rs  message.rs
src/netlink-generic/tests/: genl_ctrl_resolve_ethtool.rs
src/python/: Cargo.toml  base_iface.py  bond.py  clib_wrapper.py  iface.py  ip.py  lib.rs  setup.py  state.py  vxlan.py
src/python/nispor/: __init__.py  base_iface.py  bond.py  bridge.py  clib_wrapper.py  dns.py  ethtool.py  hsr.py  iface.py  ip.py  ipoib.py  mac_vlan.py  mac_vtap.py  macsec.py  mptcp.py  route.py  route_rule.py  sr_iov.py  state.py  tun.py  veth.py  vlan.py  vrf.py  vxlan.py
src/varlink/: Cargo.toml  info.grisge.nispor.varlink  info.grisge.zatel.varlink  info.nispor.varlink  info_grisge_nispor.rs  info_grisge_zatel.rs  info_nispor.rs  npd.rs  zateld.rs
src/varlink/systemd/: nispor.service  nispor.socket
test/clib/: Makefile  check_clib_soname.sh  nispor_test.c
tools/: nispor-in-container  test_env  upstream_release.sh
