[package]
name = "nispor-cli"
version = "1.2.4"
authors = ["Gris Ge <fge@redhat.com>"]
edition = "2018"

[[bin]]
name = "npc"
path = "npc.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "3.1.2", features = ["cargo"] }
nispor = { path = "../lib", version="1.0" }
serde_yaml = "0.8"
env_logger = "0.9.0"
log = "0.4.14"
