[package]
name = "nispor-cli"
version = "1.2.4"
authors = ["Gris Ge <fge@redhat.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Command line tool for nispor project"
homepage = "https://github.com/nispor/nispor"
repository = "https://github.com/nispor/nispor"
keywords = ["network"]
categories = ["network-programming", "os"]


[[bin]]
name = "npc"
path = "npc.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "3.1.2", features = ["cargo"] }
nispor = { path = "../lib", version="1.2.4" }
serde_yaml = "0.8"
env_logger = "0.9.0"
log = "0.4.14"
