[package]
name = "nispor-clib"
version = "1.2.16"
authors = ["Gris Ge <fge@redhat.com>"]
license = "Apache-2.0"
edition = "2021"
description = "C binding for nispor project"
homepage = "https://github.com/nispor/nispor"
repository = "https://github.com/nispor/nispor"
keywords = ["network"]
categories = ["network-programming", "os"]
build = "build.rs"

[lib]
name = "nispor"
path = "lib.rs"
crate-type = ["cdylib"]
doc = false

[dependencies]
nispor = { path = "../lib", version="1.0" }
libc = "0.2.74"
serde_json = "1.0"
