[package]
name = "nispor"
version = "1.2.4"
authors = ["Gris Ge <fge@redhat.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Unified interface for Linux network state querying"
homepage = "https://github.com/nispor/nispor"
repository = "https://github.com/nispor/nispor"
keywords = ["network"]
categories = ["network-programming", "os"]

[lib]
name = "nispor"
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
rtnetlink = "0.9.1"
netlink-packet-route = "0.11.0"
netlink-sys = "0.8.2"
netlink-packet-utils = "0.5.1"
ethtool = "0.2.2"
tokio = { version = "1.17.0", features = ["macros", "rt"] }
futures = "0.3.21"
libc = "0.2.117"
log = "0.4.14"

[dev-dependencies]
serde_yaml = "0.8.23"
pretty_assertions = "1.1.0"
