[package]
name = "nispor"
version = "1.2.7"
authors = ["Gris Ge <fge@redhat.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Unified interface for Linux network state querying"
homepage = "https://github.com/nispor/nispor"
repository = "https://github.com/nispor/nispor"
keywords = ["network"]
categories = ["network-programming", "os"]

[lib]
name = "nispor"
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
rtnetlink = "0.11.0"
netlink-packet-route = "0.13.0"
netlink-sys = "0.8.3"
netlink-packet-utils = "0.5.1"
ethtool = "0.2.2"
tokio = { version = "1.19.2", features = ["macros", "rt"] }
futures = "0.3.21"
libc = "0.2.126"
log = "0.4.17"
mptcp-pm = "0.1.0"

[dev-dependencies]
serde_yaml = "0.8.24"
pretty_assertions = "1.2.1"
