[package]
name = "netlink-ethtool"
version = "1.0.1"
authors = ["Gris Ge <cnfourt@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Linux Ethtool Communication Library"
keywords = ["network"]
categories = ["network-programming", "os"]

[lib]
name = "netlink_ethtool"
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
netlink-sys = "0.6"
netlink-packet-utils = "0.4"
netlink-packet-core = "0.2.4"
netlink-proto = "0.6"
netlink-generic = {path ="../netlink-generic"}
futures = "0.3.11"
anyhow = "1.0.31"
thiserror = "1"
byteorder = "1.3.2"
log = "0.4.14"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
env_logger = "0.8.3"
