[package]
name = "netlink-generic"
version = "0.1.0"
authors = ["Gris Ge <fge@redhat.com>"]
license = "MIT"
edition = "2018"
description = "Linux Generic Netlink Communication Library"
keywords = ["network"]
categories = ["network-programming", "os"]

[lib]
name = "netlink_generic"
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
netlink-sys = "0.6"
netlink-packet-utils = "0.4"
netlink-packet-core = "0.2.4"
netlink-proto = "0.6"
tokio = { version = "1.0.1", features = ["rt"], optional = true}
futures = "0.3.11"
anyhow = "1.0.31"
thiserror = "1"
byteorder = "1.3.2"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
