[package]
name = "python-nispor"
version = "0.2.1"
authors = ["Gris Ge <cnfourt@gmail.com>"]
edition = "2018"

[lib]
name = "nispor"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module", "macros"]

[dependencies.nispor]
path = "../lib"

[dependencies.serde_json]
version = "1.0"
